k8s/base/service-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: wafer-frontend-svc
  namespace: k8sdemo
spec:
  type: ExternalName
  externalName: wafer-frontend-svc.wafer-bi.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: wafer-backend-svc
  namespace: k8sdemo
spec:
  type: ExternalName
  externalName: wafer-backend-svc.wafer-bi.svc.cluster.local
