k8s/base/wafer-bi-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wafer-backend
  namespace: k8sdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wafer-backend
  template:
    metadata:
      labels:
        app: wafer-backend
        env: production
        managed-by: argocd
      annotations:
        deployed-at: "2026-08-04 07:57:49"
    spec:
      imagePullSecrets:
        - name: ocirsecret
      containers:
      - name: backend
        image: ghcr.io/darkschneider1024/wafer-bi-backend:0ad3eafd161d8e32f737bdc5bc430c666fef5208
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: wafer-backend-svc
  namespace: k8sdemo
spec:
  selector:
    app: wafer-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wafer-frontend
  namespace: k8sdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wafer-frontend
  template:
    metadata:
      labels:
        app: wafer-frontend
        env: production
        managed-by: argocd
      annotations:
        deployed-at: "2026-08-04 07:57:49"
    spec:
      imagePullSecrets:
        - name: ocirsecret
      containers:
      - name: frontend
        image: ghcr.io/darkschneider1024/wafer-bi-frontend:0ad3eafd161d8e32f737bdc5bc430c666fef5208
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: wafer-frontend-svc
  namespace: k8sdemo
spec:
  selector:
    app: wafer-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
